# CalendarApp

./: .gitignore  Dockerfile  Jenkinsfile  README.md  ci.env  docker-compose-ci.yaml  docker-compose.yaml  docker_ci_settings.py  runserver.sh
.github/workflows/: action.yaml
django-package/: pyproject.toml
docs/: README.md  boardparticipant.md  boards.md  comments.md  goalcategory.md  goals.md  telegram.md  users.md
myappcalendar/: .dockerignore  .env  Dockerfile  connection_config.ini  filters.py  manage.py  pytest.ini  runserver.sh
myappcalendar/bot/: models.py  serializers.py  urls.py  views.py
myappcalendar/bot/migrations/: 0001_initial.py  0002_remove_tguser_telegram_user_id_tguser_user_and_more.py  0003_alter_tguser_user.py
myappcalendar/bot/tg/: client.py  dc.py  functions.py  test_test.py  tg_test_data.py
myappcalendar/django-package/: pyproject.toml
myappcalendar/fixtures/: board.json  boardparticipant.json  category.json  goalcomment.json  goals.json  user.json
myappcalendar/goals/: admin.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
myappcalendar/goals/migrations/: 0001_initial.py  0002_goal.py  0003_goal_description.py  0004_goalcomment.py  0010_create_new_objects.py  (+9 more)
myappcalendar/login/: urls.py  views.py
myappcalendar/myappcalendar/: asgi.py  settings.py  urls.py  views.py  wsgi.py
myappcalendar/templates/: 404.html
myappcalendar/tests/: conftest.py  factories.py  fixtures.py  main.py
myappcalendar/users/: admin.py  example.py  models.py  serializers.py  urls.py  views.py
telegram/: example.py
(+10 files in other folders)
